Separate the web container into nginx and php-fpm Add coa-updater to the prod docker-compose file Use cover-updater to update the cover info DB from the COA DB Simplify setup steps

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,5 +1,14 @@
-FROM php:7.1-apache
+FROM php:7.1-fpm
 MAINTAINER Bruno Perel
+
+RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano
+
+RUN yes '' | pecl install channel://pecl.php.net/apcu_bc-1.0.4
+RUN echo 'extension=apcu.so' > /usr/local/etc/php/conf.d/apcu.ini
+
+RUN docker-php-ext-install -j$(nproc) pdo pdo_mysql exif opcache
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 COPY .htaccess /var/www/html/dm-server/.htaccess
 COPY docker-compose.yml /var/www/html/dm-server/docker-compose.yml
@@ -9,21 +18,12 @@ COPY scripts /var/www/html/dm-server/scripts
 COPY index.php /var/www/html/dm-server/index.php
 COPY composer.json /var/www/html/dm-server/composer.json
 
-RUN a2enmod rewrite
-
-RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano
-
-RUN pecl install xdebug-2.6.0
-
-RUN yes '' | pecl install channel://pecl.php.net/apcu_bc-1.0.4
-RUN echo 'extension=apcu.so' > /usr/local/etc/php/conf.d/apcu.ini
-
-RUN docker-php-ext-install -j$(nproc) pdo pdo_mysql exif opcache && docker-php-ext-enable xdebug
-
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
 RUN cd /var/www/html/dm-server && \
   composer install --no-plugins --no-scripts && \
   touch development.log && chown www-data:www-data development.log && \
   touch pimple.json && chown www-data:www-data pimple.json && \
   chmod +x scripts/*
+
+RUN pecl install xdebug-2.6.0 && docker-php-ext-enable xdebug
+
+WORKDIR /var/www/html/dm-server
