--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,9 +2,7 @@ version: '2.1'
 services:
   web:
     container_name: dm-server
-    build:
-      context: .
-      dockerfile: Dockerfile-dev
+    image: nginx:latest
     ports:
      - "10001:80"
     depends_on:
@@ -15,7 +13,22 @@ services:
      - db_edgecreator
     volumes:
      - .:/var/www/html/dm-server:z
+     - ./nginx.conf:/etc/nginx/conf.d/default.conf
      - ./php.xdebug.ini:/usr/local/etc/php/php.ini:z
+    networks:
+     - front-network
+
+  php:
+    container_name: dm-server-php
+    build:
+      context: .
+      dockerfile: Dockerfile-dev
+    volumes:
+     - .:/var/www/html/dm-server:z
+    networks:
+     - front-network
+     - db-network
+
   coa-updater:
     container_name: coa-updater
     image: "bperel/coa-updater"
@@ -27,6 +40,8 @@ services:
     volumes:
       - ./_inducks:/home/inducks:z
     command: echo "Not provisionning the COA db on dev"
+    networks:
+     - db-network
   db_coa:
     container_name: db_coa
     image: "mariadb:10.2"
@@ -36,6 +51,29 @@ services:
      - "64000:3306"
     environment:
       MYSQL_DATABASE: coa
+    networks:
+     - db-network
+     - cover-id-network
+
+  cover-updater:
+    container_name: cover-updater
+    image: "bperel/duck-cover-id-updater"
+    depends_on:
+     - db_cover_id
+     - db_coa
+    environment:
+      - MYSQL_COVER_INFO_HOST=db_cover_id
+      - MYSQL_COVER_INFO_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_COVER_INFO_DATABASE=cover_info
+      - MYSQL_COA_HOST=db_coa
+      - MYSQL_COA_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_COA_DATABASE=coa
+      - PASTEC_HOST=pastec
+      - PASTEC_PORT=4212
+      - PASTEC_CONTAINER_HOME=/pastec/build
+    networks:
+     - db-network
+     - cover-id-network
   db_cover_id:
     container_name: db_cover_id
     image: "mariadb:10.2"
@@ -45,6 +83,14 @@ services:
      - "64001:3306"
     environment:
       MYSQL_DATABASE: cover_info
+    networks:
+     - db-network
+  pastec:
+    container_name: pastec
+    image: "bperel/pastec-ubuntu-1704-timestamps"
+    networks:
+     - cover-id-network
+
   db_dm:
     container_name: db_dm
     image: "mariadb:10.2"
@@ -54,6 +100,9 @@ services:
      - "64002:3306"
     environment:
       MYSQL_DATABASE: dm
+    networks:
+     - db-network
+
   db_edgecreator:
     container_name: db_edgecreator
     image: "mariadb:10.2"
@@ -63,6 +112,9 @@ services:
      - "64003:3306"
     environment:
       MYSQL_DATABASE: edgecreator
+    networks:
+     - db-network
+
   db_dm_stats:
     container_name: db_dm_stats
     image: "mariadb:10.2"
@@ -72,11 +124,9 @@ services:
      - "64010:3306"
     environment:
       MYSQL_DATABASE: dm_stats
-  pastec:
-    container_name: pastec
-    image: "bperel/pastec-ubuntu-1704-timestamps"
-    ports:
-     - "4212:4212"
+    networks:
+     - db-network
+
   swagger:
     container_name: swagger
     image: "swaggerapi/swagger-ui"
@@ -85,3 +135,11 @@ services:
     environment:
       API_URL: http://localhost:10001/dm-server/status/swagger.json
       SWAGGER_JSON: http://dm-server/dm-server/status/swagger.json
+
+networks:
+  front-network:
+    driver: bridge
+  db-network:
+    driver: bridge
+  cover-id-network:
+    driver: bridge
