--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
   web:
     container_name: dm-server
-    build: .
+    image: nginx:latest
     ports:
      - "8001:80"
     depends_on:
@@ -12,60 +12,119 @@ services:
      - db_dm_stats
      - db_edgecreator
     volumes:
+     - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+     - front-network
+
+  php:
+    container_name: dm-server-php
+    build:
+      context: .
+      dockerfile: Dockerfile-dev
+    volumes:
      - ./ssmtp.conf:/etc/ssmtp/ssmtp.conf
+    networks:
+     - front-network
+     - db-network
+
+  coa-updater:
+    container_name: coa-updater
+    image: "bperel/coa-updater"
+    depends_on:
+     - db_coa
+    environment:
+      - MYSQL_HOST=db_coa
+      - MYSQL_DATABASE=coa
+    volumes:
+      - ./_inducks:/home/inducks:z
+    command: echo "Not provisionning the COA db on dev"
+    networks:
+     - db-network
   db_coa:
     container_name: mariadb-server-for-coa-box
-    image: "bperel/coa-box"
-    env_file: ./.env.prod
+    image: "mariadb:10.2"
+    volumes:
+     - ./sql/schema-coa.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     ports:
      - "44000:3306"
-    volumes:
-     - ../coa-box/scripts:/home/scripts
-     - ../coa-box/container.properties:/home/container.properties
     environment:
-      MYSQL_ROOT_PASSWORD: changeme
       MYSQL_DATABASE: coa
+    networks:
+     - db-network
+     - cover-id-network
+
+  cover-updater:
+    container_name: cover-updater
+    image: "bperel/duck-cover-id-updater"
+    depends_on:
+     - db_cover_id
+     - db_coa
+    environment:
+      - MYSQL_COVER_INFO_HOST=mariadb-server-for-cover-info-box
+      - MYSQL_COVER_INFO_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_COVER_INFO_DATABASE=cover_info
+      - MYSQL_COA_HOST=mariadb-server-for-coa-box
+      - MYSQL_COA_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_COA_DATABASE=coa
+      - PASTEC_HOST=pastec-ubuntu-1704-timestamps
+      - PASTEC_PORT=4212
+      - PASTEC_CONTAINER_HOME=/pastec/build
+    networks:
+     - db-network
+     - cover-id-network
   db_cover_id:
     container_name: mariadb-server-for-cover-info-box
-    build:
-      context: ../duck-cover-id
+    image: "mariadb:10.2"
+    volumes:
+     - ./sql/schema-cover_info.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     ports:
      - "44009:3306"
     environment:
       MYSQL_DATABASE: cover_info
-    volumes:
-     - ../duck-cover-id/scripts:/home/scripts
-     - ../duck-cover-id/container.properties:/home/container.properties
-  db_dm:
-    container_name: mariadb-server-for-dm
-    image: "bperel/coa-box"
-    ports:
-     - "44002:3306"
-    environment:
-      MYSQL_DATABASE: dm
-  db_edgecreator:
-    container_name: mariadb-server-for-edgecreator
-    image: "bperel/coa-box"
-    ports:
-     - "44003:3306"
-    environment:
-      MYSQL_DATABASE: edgecreator
-  db_dm_stats:
-    container_name: mariadb-server-for-dm-stats
-    image: "bperel/coa-box"
-    ports:
-     - "44010:3306"
-    environment:
-      MYSQL_DATABASE: dm_stats
-    volumes:
-     - ../dm-stats/scripts:/home/scripts
-     - ../dm-stats/container.properties:/home/container.properties
+    networks:
+     - db-network
   pastec:
     container_name: pastec-ubuntu-1704-timestamps
     image: "bperel/pastec-ubuntu-1704-timestamps"
     ports:
      - "4214:4212"
     restart: always
+    networks:
+     - cover-id-network
+
+  db_dm:
+    container_name: mariadb-server-for-dm
+    image: "mariadb:10.2"
+    volumes:
+     - ./sql/schema-dm.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+    ports:
+     - "44002:3306"
+    environment:
+      MYSQL_DATABASE: dm
+    networks:
+     - db-network
+  db_edgecreator:
+    container_name: mariadb-server-for-edgecreator
+    image: "mariadb:10.2"
+    volumes:
+     - ./sql/schema-edgecreator.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+    ports:
+     - "44003:3306"
+    environment:
+      MYSQL_DATABASE: edgecreator
+    networks:
+     - db-network
+  db_dm_stats:
+    container_name: mariadb-server-for-dm-stats
+    image: "mariadb:10.2"
+    volumes:
+     - ./sql/schema-dm_stats.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+    ports:
+     - "44010:3306"
+    environment:
+      MYSQL_DATABASE: dm_stats
+    networks:
+     - db-network
   swagger:
     container_name: swagger
     image: "swaggerapi/swagger-ui"
@@ -74,7 +133,11 @@ services:
     environment:
       API_URL: http://${DMSERVER_HOST}:8001/dm-server/status/swagger.json
       SWAGGER_JSON: http://dm-server/dm-server/status/swagger.json
+
 networks:
-  default:
-    external:
-      name: dm_network
+  front-network:
+    driver: bridge
+  db-network:
+    driver: bridge
+  cover-id-network:
+    driver: bridge
