--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,7 @@
     },
     "require": {
         "php": "7.1.*",
-        "silex/silex": "2.3.x-dev",
+        "silex/silex": "2.3.*",
         "sorien/silex-pimple-dumper": "2.0.*",
         "symfony/browser-kit": "4.0.*",
         "symfony/config": "4.0.*",
@@ -109,7 +109,7 @@
         "radebatz/silex2swagger": "3.0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.1.*",
+        "phpunit/phpunit": "7.2.*",
         "phpunit/php-code-coverage": "6.0.*"
     }
 }
