--- a/composer.json
+++ b/composer.json
@@ -92,12 +92,12 @@
         "php": "7.1.*",
         "silex/silex": "2.3.*",
         "sorien/silex-pimple-dumper": "2.0.*",
-        "symfony/browser-kit": "4.0.*",
-        "symfony/config": "4.0.*",
-        "symfony/security": "4.0.*",
-        "symfony/serializer": "4.0.*",
-        "symfony/yaml": "4.0.*",
-        "symfony/translation": "4.0.*",
+        "symfony/browser-kit": "4.1.*",
+        "symfony/config": "4.1.*",
+        "symfony/security": "4.1.*",
+        "symfony/serializer": "4.1.*",
+        "symfony/yaml": "4.1.*",
+        "symfony/translation": "4.1.*",
         "doctrine/dbal": "2.7.*",
         "doctrine/orm": "2.6.*",
         "doctrine/doctrine-bundle": "1.9.*",
@@ -110,6 +110,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "7.2.*",
-        "phpunit/php-code-coverage": "6.0.*"
+        "phpunit/php-code-coverage": "6.0.*",
+        "symfony/phpunit-bridge": "^4.1"
     }
 }
