Name the DM DB "db_dm_copy" to avoid confusion with the dm.net DM DB Externalize the name of the script to load on MariaDB start

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 MYSQL_ROOT_PASSWORD=changeme
+MYSQL_INIT_SCRIPT_COA=./sql/schema-coa-populated.sql.gz
+MYSQL_INIT_SCRIPT_COVER_INFO=./sql/schema-cover_info-populated.sql.gz
+MYSQL_INIT_SCRIPT_DM=./sql/schema-dm-populated.sql.gz
+MYSQL_INIT_SCRIPT_DM_STATS=./sql/schema-dm_stats-populated.sql.gz
+MYSQL_INIT_SCRIPT_EDGECREATOR=./sql/schema-edgecreator-populated.sql.gz
+MYSQL_INIT_SCRIPT_TARGET_FILE_NAME=schema-populated.sql.gz
+DM_SERVER_HOST=localhost
+DM_SERVER_PORT=10001
