--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
   web:
     container_name: dm-server
-    image: nginx:latest
+    image: "nginx:1.15"
     ports:
      - "8001:80"
     depends_on:
@@ -11,6 +11,7 @@ services:
      - db_dm_copy
      - db_dm_stats
      - db_edgecreator
+     - php
     volumes:
      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
@@ -107,7 +108,7 @@ services:
     container_name: mariadb-server-for-edgecreator
     image: "mariadb:10.2"
     volumes:
-     - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - $MYSQL_INIT_SCRIPT_EDGECREATOR:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
     ports:
      - "44003:3306"
     environment:
@@ -119,7 +120,7 @@ services:
     container_name: mariadb-server-for-dm-stats
     image: "mariadb:10.2"
     volumes:
-     - $MYSQL_INIT_SCRIPT_EDGECREATOR:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
+     - $MYSQL_INIT_SCRIPT_DM_STATS:/docker-entrypoint-initdb.d/$MYSQL_INIT_SCRIPT_TARGET_FILE_NAME:ro
     ports:
      - "44010:3306"
     environment:
