--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
      - php
     volumes:
      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-     - ./current:/var/www/html/dm-server:z
+     - ./current:/var/www/html:z
     networks:
      - front-network
 
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile
     volumes:
      - ./ssmtp.conf:/etc/ssmtp/ssmtp.conf
-     - ./current:/var/www/html/dm-server:z
+     - ./current:/var/www/html:z
     networks:
      - front-network
      - db-network
@@ -136,7 +136,8 @@ services:
     ports:
      - "8081:8080"
     depends_on:
-     - dm-server
+     - web
+     - php
     environment:
       API_URL: http://${DMSERVER_HOST}:${DMSERVER_PORT}/status/swagger.json
       SWAGGER_JSON: http://dm-server/status/swagger.json
