--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     index index.php index.html;
     server_name localhost;
-    root /var/www/html/dm-server;
+    root /var/www/html;
 
     location / {
         try_files $uri /index.php$is_args$args;
