--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -7,3 +7,4 @@ smtp_password=pass
 smtp_username=user
 smtp_origin_email_domain_edgecreator=localhost-origin-edgecreator
 smtp_origin_email_domain_ducksmanager=localhost-origin-ducksmanager
+swagger_path=/var/www/html/swagger.json
