--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,9 @@
     },
     "require": {
         "php": "7.1.*",
+        "ext-curl": "*",
+        "ext-exif": "*",
+        "ext-json": "*",
         "silex/silex": "2.3.*",
         "sorien/silex-pimple-dumper": "2.0.*",
         "symfony/browser-kit": "4.1.*",
