Add missing default value for environment variable

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MYSQL_INIT_SCRIPT_EDGECREATOR=./sql/schema-edgecreator-populated.sql.gz
 MYSQL_INIT_SCRIPT_TARGET_FILE_NAME=schema-populated.sql.gz
 DM_SERVER_HOST=localhost
 DM_SERVER_PORT=10001
+LOG_SERVER_ADDRESS=udp://127.0.0.1:5001
