Allow to specify a custom Pastec host when checking its status

--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -1,6 +1,6 @@
 image_local_root=/tmp/dm-server/
 image_remote_root=/tmp/dm-server/remote/
-pastec_host=pastec3
+pastec_hosts=pastec
 pastec_port=4212
 smtp_host=localhost
 smtp_origin_email_domain_ducksmanager=ducksmanager.net
