--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -1,6 +1,6 @@
 image_local_root=/tmp/dm-server/
 image_remote_root=http://outducks.org/
-pastec_host=pastec3
+pastec_hosts=pastec
 pastec_port=4212
 smtp_host=localhost
 smtp_password=pass
