--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,10 @@
                 "app",
                 "app/helpers"
             ],
+            "DmServer\\Emails\\": [
+                "app/helpers",
+                "app/helpers/emails"
+            ],
             "DmServer\\Test\\": [
                 "test"
             ]
