--- a/composer.json
+++ b/composer.json
@@ -110,14 +110,14 @@
         "doctrine/doctrine-bundle": "1.9.*",
         "monolog/monolog": "1.23.*",
         "gedmo/doctrine-extensions": "2.4.*",
-        "swiftmailer/swiftmailer": "6.0.*",
+        "swiftmailer/swiftmailer": "6.1.*",
         "jdesrosiers/silex-cors-provider": "~1.0",
-        "roave/security-advisories": "dev-master",
         "radebatz/silex2swagger": "3.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "7.4.*",
         "phpunit/php-code-coverage": "6.0.*",
-        "symfony/phpunit-bridge": "^4.1"
+        "symfony/phpunit-bridge": "^4.1",
+        "roave/security-advisories": "dev-master"
     }
 }
