Add pictures in confirmation email for edge publication

--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -1,3 +1,4 @@
+assets_medals_pictures_root=http://localhost:8000/images/medailles/
 image_local_root=/tmp/dm-server/
 image_remote_root=http://outducks.org/
 pastec_hosts=pastec
@@ -8,3 +9,4 @@ smtp_username=user
 smtp_origin_email_domain_edgecreator=localhost-origin-edgecreator
 smtp_origin_email_domain_ducksmanager=localhost-origin-ducksmanager
 swagger_path=/var/www/html/swagger.json
+website_root=http://localhost:8000/
