--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -1,3 +1,4 @@
+assets_medals_pictures_root=http://localhost:8000/images/medailles/
 image_local_root=/tmp/dm-server/
 image_remote_root=/tmp/dm-server/remote/
 pastec_hosts=pastec
@@ -8,3 +9,4 @@ smtp_origin_email_domain_edgecreator=edgecreator.ducksmanager.net
 smtp_password=pass
 smtp_username=user@ducksmanager.net
 swagger_path=/var/www/html/test/fixtures/swagger.json
+website_root=http://localhost:8000/
