--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,9 @@
                 "app/helpers/emails"
             ],
             "DmServer\\Test\\": [
-                "test"
+                "test",
+                "test/collection",
+                "test/user"
             ]
         }
     },
