Add URL root for uploaded images in the email notification for edge photo uploads

--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -1,12 +1,13 @@
 assets_medals_pictures_root=http://localhost:8000/images/medailles/
 image_local_root=/tmp/dm-server/
 image_remote_root=http://outducks.org/
+image_upload_root=http://localhost:8000/edges/tranches_multiples/
 pastec_hosts=pastec
 pastec_port=4212
 smtp_host=localhost
-smtp_password=pass
-smtp_username=user
+smtp_origin_email_domain_ducksmanager=localhost-origin
 smtp_origin_email_domain_edgecreator=localhost-origin-edgecreator
-smtp_origin_email_domain_ducksmanager=localhost-origin-ducksmanager
+smtp_password=pass
+smtp_username=user-ducksmanager
 swagger_path=/var/www/html/swagger.json
 website_root=http://localhost:8000/
