--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -1,6 +1,7 @@
 assets_medals_pictures_root=http://localhost:8000/images/medailles/
 image_local_root=/tmp/dm-server/
 image_remote_root=/tmp/dm-server/remote/
+image_upload_root=/tmp/uploaded_edges/
 pastec_hosts=pastec
 pastec_port=4212
 smtp_host=localhost
