Allow to run queries on a remote server

--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -4,6 +4,13 @@ image_remote_root=/tmp/dm-server/remote/
 image_upload_root=/tmp/uploaded_edges/
 pastec_hosts=pastec
 pastec_port=4212
+
+remote_query_name=dm
+remote_query_server=http://dm.net
+remote_query_db=db
+remote_query_password=pass
+
+
 smtp_host=localhost
 smtp_origin_email_domain_ducksmanager=ducksmanager.net
 smtp_origin_email_domain_edgecreator=edgecreator.ducksmanager.net
