--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -4,6 +4,12 @@ image_remote_root=http://outducks.org/
 image_upload_root=http://localhost:8000/edges/tranches_multiples/
 pastec_hosts=pastec
 pastec_port=4212
+
+remote_query_name=dm
+remote_query_server=http://ducksmanager
+remote_query_db=db301759616
+remote_query_password=changeme
+
 smtp_host=localhost
 smtp_origin_email_domain_ducksmanager=localhost-origin
 smtp_origin_email_domain_edgecreator=localhost-origin-edgecreator
