Set friendly name for To and From e-mail fields

--- a/app/config/settings.base.ini
+++ b/app/config/settings.base.ini
@@ -14,6 +14,7 @@ smtp_host=localhost
 smtp_origin_email_domain_ducksmanager=localhost-origin
 smtp_origin_email_domain_edgecreator=localhost-origin-edgecreator
 smtp_password=pass
-smtp_username=user-ducksmanager
+smtp_username=admin@ducksmanager.net
+smtp_friendlyname=DucksManager
 swagger_path=/var/www/html/swagger.json
 website_root=http://localhost:8000/
