--- a/app/config/settings.test.ini
+++ b/app/config/settings.test.ini
@@ -10,11 +10,11 @@ remote_query_server=http://dm.net
 remote_query_db=db
 remote_query_password=pass
 
-
 smtp_host=localhost
 smtp_origin_email_domain_ducksmanager=ducksmanager.net
 smtp_origin_email_domain_edgecreator=edgecreator.ducksmanager.net
 smtp_password=pass
-smtp_username=user@ducksmanager.net
+smtp_username=admin@ducksmanager.net
+smtp_friendlyname=DucksManager
 swagger_path=/var/www/html/test/fixtures/swagger.json
 website_root=http://localhost:8000/
