--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,6 +12,7 @@ services:
      - db_dm_stats
      - db_edgecreator
      - php
+    restart: always
     volumes:
      - .:/var/www/html:z
      - ./nginx.conf:/etc/nginx/conf.d/default.conf
