--- a/.env
+++ b/.env
@@ -5,13 +5,19 @@ MYSQL_INIT_SCRIPT_DM=./sql/schema-dm.sql
 MYSQL_INIT_SCRIPT_DM_STATS=./sql/schema-dm_stats.sql
 MYSQL_INIT_SCRIPT_EDGECREATOR=./sql/schema-edgecreator.sql
 MYSQL_INIT_SCRIPT_TARGET_FILE_NAME=schema.sql
-DM_SERVER_HOST=localhost
-DM_SERVER_PORT=10001
-LOG_SERVER_ADDRESS=udp://127.0.0.1:5001
+DM_SERVER_HOST=
+DM_SERVER_PORT=
+LOG_SERVER_ADDRESS=
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+
+ROLE_PASSWORD_DUCKSMANAGER=ducksmanagerpass
+ROLE_PASSWORD_EDGECREATOR=edgecreatorpass
+ROLE_PASSWORD_WHATTHEDUCK=whattheduckpass
+ROLE_PASSWORD_RAWSQL=rawsqlpass
+ROLE_PASSWORD_ADMIN=adminpass
 
 DATABASE_DM_HOST=db_dm
 DATABASE_DM_PORT=3306
