Use mailcatcher locally

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,7 +1,9 @@
 FROM php:7.2-fpm
 MAINTAINER Bruno Perel
 
-RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano
+RUN apt-get update && apt-get install -y git wget unzip mariadb-client nano ssmtp telnet
+
+RUN echo 'sendmail_path = /usr/bin/env catchmail -f admin@ducksmanager.net' > /usr/local/etc/php/conf.d/mail.ini
 
 RUN pecl install apcu
 RUN echo "extension=apcu.so" > /usr/local/etc/php/conf.d/apcu.ini
