Remove trailing slash in root website URL Extract root website URL from URL

--- a/.env
+++ b/.env
@@ -62,8 +62,7 @@ SMTP_ORIGIN_EMAIL_DOMAIN_EDGECREATOR=localhost-origin-edgecreator
 SMTP_PASSWORD=pass
 SMTP_USERNAME=user-ducksmanager
 
-WEBSITE_ROOT=http://localhost:8000/
-
+WEBSITE_ROOT=http://localhost:8000
 
 
 ###> symfony/swiftmailer-bundle ###
