--- a/.env.test
+++ b/.env.test
@@ -32,4 +32,4 @@ SMTP_ORIGIN_EMAIL_DOMAIN_EDGECREATOR=edgecreator.ducksmanager.net
 SMTP_PASSWORD=pass
 SMTP_USERNAME=admin@ducksmanager.net
 SMTP_FRIENDLYNAME=DucksManager
-WEBSITE_ROOT=http://localhost:8000/
+WEBSITE_ROOT=http://localhost:8000
