Remove unused env variables

--- a/.env
+++ b/.env
@@ -5,8 +5,6 @@ MYSQL_INIT_SCRIPT_DM=./sql/schema-dm.sql
 MYSQL_INIT_SCRIPT_DM_STATS=./sql/schema-dm_stats.sql
 MYSQL_INIT_SCRIPT_EDGECREATOR=./sql/schema-edgecreator.sql
 MYSQL_INIT_SCRIPT_TARGET_FILE_NAME=schema.sql
-DM_SERVER_HOST=
-DM_SERVER_PORT=
 LOG_SERVER_ADDRESS=
 
 ###> nelmio/cors-bundle ###
@@ -61,6 +59,7 @@ SMTP_ORIGIN_EMAIL_DOMAIN_DUCKSMANAGER=localhost-origin
 SMTP_ORIGIN_EMAIL_DOMAIN_EDGECREATOR=localhost-origin-edgecreator
 SMTP_PASSWORD=pass
 SMTP_USERNAME=user-ducksmanager
+SMTP_FRIENDLYNAME=DucksManager
 
 WEBSITE_ROOT=http://localhost:8000
 
