Adapt deployment scripts to new structure

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+APP_ENV=dev
+
 MYSQL_ROOT_PASSWORD=changeme
 MYSQL_INIT_SCRIPT_COA=./sql/schema-coa.sql
 MYSQL_INIT_SCRIPT_COVER_INFO=./sql/schema-cover_info.sql
