--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,13 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "api-platform/api-pack": "^1.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.2",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/maker-bundle": "^1.11",
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
@@ -35,6 +37,7 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
+        "symfony/web-server-bundle": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
     "config": {
@@ -83,12 +86,9 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "roave/security-advisories": "dev-master",
         "symfony/browser-kit": "4.2.*",
         "symfony/css-selector": "4.2.*",
-        "symfony/maker-bundle": "^1.11",
-        "symfony/phpunit-bridge": "4.2.*",
-        "symfony/web-server-bundle": "4.2.*"
+        "symfony/phpunit-bridge": "4.2.*"
 	}
 }
