Fix fixtures path

--- a/config/packages/test/doctrine.yaml
+++ b/config/packages/test/doctrine.yaml
@@ -1,4 +1,4 @@
 services:
   App\Tests\Fixtures\:
-    resource: '../tests/Fixtures'
+    resource: '../../../tests/Fixtures'
     tags: ['doctrine.fixture.orm']
