Init Cloudinary integration

--- a/.env
+++ b/.env
@@ -72,3 +72,5 @@ WEBSITE_ROOT=http://localhost:8000
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
