--- a/.env
+++ b/.env
@@ -64,6 +64,7 @@ SMTP_USERNAME=user-ducksmanager
 SMTP_FRIENDLYNAME=DucksManager
 
 WEBSITE_ROOT=http://localhost:8000
+EDGES_ROOT=http://localhost:8000/edges
 
 
 ###> symfony/swiftmailer-bundle ###
