--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "cloudinary/cloudinary_php": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "sensio/framework-extra-bundle": "^5.2",
+        "symfony-bundles/json-request-bundle": "^2.0",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.2",
