Pass publication codes as a single field instead of 2

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/(?!status).+
+            pattern: ^/(?!status)(?!edgesprites).+
             http_basic: ~
 
     access_control:
