--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/(?!coa)(?!cover-id)(?!edgesprites)(?!status).+
+            pattern: ^/(?!coa)(?!cover-id)(?!status).+
             http_basic: ~
 
     access_control:
