Don't request credentials for COA services

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/(?!status)(?!edgesprites).+
+            pattern: ^/(?!coa)(?!edgesprites)(?!status).+
             http_basic: ~
 
     access_control:
