--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
         "symfony-bundles/json-request-bundle": "^2.0",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
-        "symfony/flex": "^1.2",
+        "symfony/flex": "^1.4",
         "symfony/framework-bundle": "4.2.*",
-        "symfony/maker-bundle": "^1.11",
-        "symfony/monolog-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.12",
+        "symfony/monolog-bundle": "^3.4",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "4.2.*",
@@ -41,6 +41,13 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/web-server-bundle": "4.2.*",
         "symfony/yaml": "4.2.*"
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "roave/security-advisories": "dev-master",
+        "symfony/browser-kit": "4.2.*",
+        "symfony/css-selector": "4.2.*",
+        "symfony/phpunit-bridge": "4.2.*"
     },
     "config": {
         "preferred-install": {
@@ -86,11 +93,5 @@
             "allow-contrib": false,
             "require": "4.2.*"
         }
-    },
-    "require-dev": {
-        "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "4.2.*",
-        "symfony/css-selector": "4.2.*",
-        "symfony/phpunit-bridge": "4.2.*"
-	}
+    }
 }
