--- a/.env.test
+++ b/.env.test
@@ -5,8 +5,14 @@ APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 
 DATABASE_DRIVER=pdo_sqlite
-DATABASE_IN_MEMORY=true
+DATABASE_IN_MEMORY=false
 DATABASE_SERVER_VERSION=
+
+DATABASE_DM_PATH=dm.sqlite
+DATABASE_COA_PATH=coa.sqlite
+DATABASE_COVER_ID_PATH=coverid.sqlite
+DATABASE_DM_STATS_PATH=dm_stats.sqlite
+DATABASE_EDGECREATOR_PATH=edgecreator.sqlite
 
 ROLE_PASSWORD_DUCKSMANAGER=ducksmanagerpass
 ROLE_PASSWORD_EDGECREATOR=edgecreatorpass
