--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "liip/test-fixtures-bundle": "^1.3.0",
         "roave/security-advisories": "dev-master",
         "symfony/browser-kit": "4.3.*",
         "symfony/css-selector": "4.3.*",
