--- a/config/packages/test/doctrine.yaml
+++ b/config/packages/test/doctrine.yaml
@@ -2,3 +2,16 @@ services:
   App\Tests\Fixtures\:
     resource: '../../../tests/Fixtures'
     tags: ['doctrine.fixture.orm']
+doctrine:
+  dbal:
+    connections:
+      dm:
+        path: "%env(DATABASE_DM_PATH)%"
+      coa:
+        path: "%env(DATABASE_COA_PATH)%"
+      coverid:
+        path: "%env(DATABASE_COVER_ID_PATH)%"
+      dm_stats:
+        path: "%env(DATABASE_DM_STATS_PATH)%"
+      edgecreator:
+        path: "%env(DATABASE_EDGECREATOR_PATH)%"
