Create endpoint and tests to send mobile notifications to users

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "api-platform/api-pack": "^1.2",
+        "beberlei/doctrineextensions": "^1.2",
         "cloudinary/cloudinary_php": "1.14.*",
+        "pusher/pusher-push-notifications": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony-bundles/json-request-bundle": "^2.0",
         "symfony/console": "4.3.*",
