--- a/.env
+++ b/.env
@@ -68,3 +68,6 @@ EDGES_ROOT=http://localhost:8000/edges
 PASTEC_INIT_INDEX=./pastec-index-last.dat
 
 CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
+
+PUSHER_INSTANCE_ID=my_instance_id
+PUSHER_SECRET_KEY=my_secret_key
