--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -74,6 +74,9 @@ doctrine:
                         dir: '%kernel.project_dir%/src/Entity/Dm'
                         prefix: 'App\Entity\Dm'
                         alias: Dm
+                dql:
+                    string_functions:
+                        group_concat: DoctrineExtensions\Query\Mysql\GroupConcat
             coa:
                 connection: coa
                 mappings:
